tests/negative/lexer/char_invalid.orng
// char_invalid.orng:6:16: error: invalid escape sequence '\d'
//     let x = '\d'
//               ^
// 
fn main() -> Int {
    let x = '\d'
    0
}